--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" type="button" id="navbarDropdown" data-bs-toggle="dropdown" aria-expanded="false" disabled>
-                                Comming Soon
+                                Motion-Tools
                             </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="">Comming Soon</a></li>
+                            </ul>
                         </li> 
                         <form action="{{ url_for('login.logout') }}" method="post">
                             <button type="submit" class="nav-link" style="border: none; background: none;" disabled><i class="fas fa-sign-out-alt"></i> Comming Soon</button>
