--- a/index.html
+++ b/index.html
@@ -231,27 +231,27 @@
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "{{ url_for('static', filename='js/mviz.js') }}";
+                    import { run } from "js/mviz.js";
                         $(document).ready(function() {
-                            run('0060.npy');
+                            run('assets/motions/0060.npy');
                         });
                 </script>  
             </body>
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "{{ url_for('static', filename='js/mviz.js') }}";
+                    import { run } from "js/mviz.js";
                         $(document).ready(function() {
-                            run('0043.npy');
+                            run('assets/motions/0043.npy');
                         });
                 </script>  
             </body>
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "{{ url_for('static', filename='js/mviz.js') }}";
+                    import { run } from "js/mviz.js";
                         $(document).ready(function() {
-                            run('0160.npy');
+                            run('assets/motions/0160.npy');
                         });
                 </script>  
             </body>
