changed Path for js

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "js/mviz.js";
+                    import { run } from "./js/mviz.js";
                         $(document).ready(function() {
                             run('assets/motions/0060.npy');
                         });
@@ -240,7 +240,7 @@
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "js/mviz.js";
+                    import { run } from "./js/mviz.js";
                         $(document).ready(function() {
                             run('assets/motions/0043.npy');
                         });
@@ -249,7 +249,7 @@
             <body>
                 <div id="c1"></div>           
                 <script type="module">
-                    import { run } from "js/mviz.js";
+                    import { run } from "./js/mviz.js";
                         $(document).ready(function() {
                             run('assets/motions/0160.npy');
                         });
